# nss-zero-dns

./: CMakeLists.txt  README.md
Modules/: FindZeroMQ.cmake
src/: CMakeLists.txt  bsdnss.c  nss.c  nss.h  util.c  util.h  zero-dns.c  zero-dns.h
